<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/primary_light">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Evento X"
            android:id="@+id/txtEvento"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGerar"
        android:id="@+id/btn_Gerar"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnListarConvidados"
        android:id="@+id/btn_ListarConvidados"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckin"
        android:id="@+id/btnCheckin"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

</LinearLayout>

